--- a/study/study.html
+++ b/study/study.html
@@ -6,27 +6,16 @@
       body {
         height: 100vh;
         margin: 10px;
-        display: flex;
-        justify-content: space-around;
-        align-items: flex-end;
-        flex-direction: column;
       }
       div {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 100px;
-        height: 100px;
+        width: 300px;
+        height: 300px;
+        color: white;
         background-color: teal;
-      }
-      #second {
-        background-color: wheat;
       }
     </style>
   </head>
   <body>
     <div>1</div>
-    <div id="second">2</div>
-    <div>3</div>
   </body>
 </html>
