--- a/study/study.html
+++ b/study/study.html
@@ -4,10 +4,11 @@
     <link href="styles.css" , rel="stylesheed" />
     <style>
       body {
-        height: 100vh;
-        margin: 10px;
+        height: 1000vh;
+        margin: 20px;
       }
       div {
+        position: fixed;
         width: 300px;
         height: 300px;
         color: white;
