--- a/study/study.html
+++ b/study/study.html
@@ -4,19 +4,26 @@
     <link href="styles.css" , rel="stylesheed" />
     <style>
       body {
-        height: 1000vh;
+        height: 500vh;
         margin: 20px;
       }
       div {
-        position: fixed;
         width: 300px;
         height: 300px;
         color: white;
+      }
+      #green {
         background-color: teal;
+        position: fixed;
+        opacity: 0.2;
+      }
+      #different {
+        background-color: wheat;
       }
     </style>
   </head>
   <body>
-    <div>1</div>
+    <div id="green">1</div>
+    <div id="different"></div>
   </body>
 </html>
