--- a/study/study.html
+++ b/study/study.html
@@ -4,26 +4,27 @@
     <link href="styles.css" , rel="stylesheed" />
     <style>
       body {
-        height: 500vh;
-        margin: 20px;
+        height: 100vh;
+        margin: 100px;
       }
       div {
         width: 300px;
         height: 300px;
-        color: white;
-      }
-      #green {
-        background-color: teal;
-        position: fixed;
-        opacity: 0.2;
-      }
-      #different {
         background-color: wheat;
+      }
+      .green {
+        background-color: green;
+        height: 150px;
+        width: 150px;
+        position: absolute;
+        bottom: 10px;
+        left: -10px;
       }
     </style>
   </head>
   <body>
-    <div id="green">1</div>
-    <div id="different"></div>
+    <div>
+      <div class="green"></div>
+    </div>
   </body>
 </html>
