--- a/study/study.html
+++ b/study/study.html
@@ -11,14 +11,15 @@
         width: 300px;
         height: 300px;
         background-color: wheat;
+        position: relative;
       }
       .green {
         background-color: green;
         height: 150px;
         width: 150px;
         position: absolute;
-        bottom: 10px;
-        left: -10px;
+        bottom: 0px;
+        right: 0px;
       }
     </style>
   </head>
