--- a/study/study.html
+++ b/study/study.html
@@ -7,25 +7,26 @@
         height: 100vh;
         margin: 100px;
       }
-      div {
-        width: 300px;
-        height: 300px;
-        background-color: wheat;
-        position: relative;
+      span{
+        background-color: tomato;
       }
-      .green {
-        background-color: green;
-        height: 150px;
-        width: 150px;
-        position: absolute;
-        bottom: 0px;
-        right: 0px;
+      span:nth-child(2n+4){
+        background-color: teal;
       }
+      
     </style>
   </head>
   <body>
-    <div>
-      <div class="green"></div>
-    </div>
+    <span>hello</span>
+    <span>hello</span>
+    <span>hello</span>
+    <span>hello</span>
+    <span>hello</span>
+    <span>hello</span>
+    <span>hello</span>
+    <span>hello</span>
+    <span>hello</span>
+    <span>hello</span>
+    <span>hello</span>
   </body>
 </html>
