--- a/study/study.html
+++ b/study/study.html
@@ -8,25 +8,24 @@
         margin: 100px;
       }
       span{
-        background-color: tomato;
+        background-color: yellowgreen;
+        color:tomato;
+        padding: 5px;
+        border-radius:10px;
       }
-      span:nth-child(2n+4){
-        background-color: teal;
+      p span {
+        color:white;
+      }
+      p + span{
+        text-decoration: underline;
       }
       
     </style>
   </head>
   <body>
-    <span>hello</span>
-    <span>hello</span>
-    <span>hello</span>
-    <span>hello</span>
-    <span>hello</span>
-    <span>hello</span>
-    <span>hello</span>
-    <span>hello</span>
-    <span>hello</span>
-    <span>hello</span>
-    <span>hello</span>
+    <div>
+      <p>asd <span>asggdf</span>twrgasd</p>
+      <span>HELLO</span> 
+    </div>
   </body>
 </html>
