--- a/study/study.html
+++ b/study/study.html
@@ -7,25 +7,25 @@
         height: 100vh;
         margin: 100px;
       }
-      span{
+      span {
         background-color: yellowgreen;
-        color:tomato;
+        color: tomato;
         padding: 5px;
-        border-radius:10px;
+        border-radius: 10px;
       }
       p span {
-        color:white;
+        color: white;
       }
-      p + span{
+      p + span {
         text-decoration: underline;
       }
-      
     </style>
   </head>
   <body>
     <div>
       <p>asd <span>asggdf</span>twrgasd</p>
-      <span>HELLO</span> 
+      <address>hi</address>
+      <span>HELLO</span>
     </div>
   </body>
 </html>
