input:optional 의 같은 코드
더 간결하게

--- a/study/study.html
+++ b/study/study.html
@@ -13,11 +13,11 @@
         padding: 5px;
         border-radius: 10px;
       }
-      input:optional {
+      input {
         border: 1px solid wheat;
       }
       input:required {
-        border: 1px solid tomato;
+        border-color: tomato;
       }
     </style>
   </head>
