using attribute selector

--- a/study/study.html
+++ b/study/study.html
@@ -19,6 +19,9 @@
       input:required {
         border-color: tomato;
       }
+      input[type="password"] {
+        background-color: thistle;
+      }
     </style>
   </head>
   <body>
