~로 끝나는 녀석 모두!
input[placeholder$="me"]

--- a/study/study.html
+++ b/study/study.html
@@ -19,7 +19,7 @@
       input:required {
         border-color: tomato;
       }
-      input[placeholder~="name"] {
+      input[placeholder$="me"] {
         background-color: thistle;
       }
     </style>
