--- a/study/study.html
+++ b/study/study.html
@@ -13,24 +13,14 @@
         padding: 5px;
         border-radius: 10px;
       }
-      input {
-        border: 1px solid wheat;
-      }
-      input:required {
-        border-color: tomato;
-      }
-      input[placeholder$="me"] {
-        background-color: thistle;
+      button:active {
+        background-color: tomato;
       }
     </style>
   </head>
   <body>
     <div>
-      <form>
-        <input type="text" placeholder="first name" />
-        <input type="text" placeholder="last name" />
-        <input type="password" required placeholder="password" />
-      </form>
+      <button>Hello</button>
     </div>
   </body>
 </html>
