--- a/study/study.html
+++ b/study/study.html
@@ -13,7 +13,7 @@
         padding: 5px;
         border-radius: 10px;
       }
-      button:active {
+      button:hover {
         background-color: tomato;
       }
     </style>
