--- a/study/study.html
+++ b/study/study.html
@@ -7,20 +7,27 @@
         height: 100vh;
         margin: 100px;
       }
-      span {
-        background-color: yellowgreen;
-        color: tomato;
-        padding: 5px;
-        border-radius: 10px;
+      form {
+        border: 1px solid salmon;
+        display: flex;
+        flex-direction: column;
+        padding: 20px;
       }
-      button:hover {
-        background-color: tomato;
+      form:hover input:focus {
+        background-color: seagreen;
       }
     </style>
   </head>
   <body>
+    <form>
+      <input type="text" name="" id="" />
+      <input type="text" name="" id="" />
+      <input type="text" name="" id="" />
+    </form>
+    <br />
     <div>
-      <button>Hello</button>
+      <a href="https://www.apple.com">Go to apple</a><br />
+      <a href="https://www.naver.com">Go to naver</a>
     </div>
   </body>
 </html>
