--- a/study/study.html
+++ b/study/study.html
@@ -3,31 +3,17 @@
   <head>
     <link href="styles.css" , rel="stylesheed" />
     <style>
-      body {
-        height: 100vh;
-        margin: 100px;
+      p::selection{
+        color:white;
+        background-color: yellowgreen;
       }
-      form {
-        border: 1px solid salmon;
-        display: flex;
-        flex-direction: column;
-        padding: 20px;
-      }
-      form:hover input:focus {
-        background-color: seagreen;
+      p::first-letter{
+        color:rgba(216, 37, 37, 0.623);
+        font-size:250%;
       }
     </style>
   </head>
   <body>
-    <form>
-      <input type="text" name="" id="" />
-      <input type="text" name="" id="" />
-      <input type="text" name="" id="" />
-    </form>
-    <br />
-    <div>
-      <a href="https://www.apple.com">Go to apple</a><br />
-      <a href="https://www.naver.com">Go to naver</a>
-    </div>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusantium perspiciatis debitis possimus deserunt quos, praesentium dignissimos veniam perferendis dolor. Dignissimos doloremque quam eligendi rerum voluptates corporis impedit nesciunt culpa ipsam?</p>
   </body>
 </html>
