--- a/study/study.html
+++ b/study/study.html
@@ -3,26 +3,18 @@
   <head>
     <link href="styles.css" , rel="stylesheed" />
     <style>
-      :root{
-        --main-color:#00c1fc;
-        --default-border: 1px solid var(----main-color);
+      img{
+        border:5px solid black ;
+        border-radius: 50%;
+        transition: transform 1.5s ease-in-out;
       }
-      p::selection{
-        color:white;
-        background-color: var(--main-color);
-      }
-      p::first-letter{
-        color:var(--main-color);
-        font-size:250%;
-      }
-      a{
-        color: var(--main-color);
-        border: var(--default-border);
+      img:hover{
+        transform: rotateZ(90deg) scale(0.5);
       }
     </style>
   </head>
   <body>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusantium perspiciatis debitis possimus deserunt quos, praesentium dignissimos veniam perferendis dolor. Dignissimos doloremque quam eligendi rerum voluptates corporis impedit nesciunt culpa ipsam?</p>
-    <a href='#'>Website</a>
+    <img src='logo.JPG'/>
+    <span>hahahsdhgajsdfas</span>
   </body>
 </html>
