--- a/study/study.html
+++ b/study/study.html
@@ -3,13 +3,22 @@
   <head>
     <link href="styles.css" , rel="stylesheed" />
     <style>
+      @keyframes coinFlip {
+        0%{
+          transform : rotateY(0);
+        }
+        50%{
+          transform : rotateY(360deg) translateY(-100px);
+        }
+        100%{
+          transform : rotateY(0) 
+        }
+      }
       img{
         border:5px solid black ;
+        width : 250px;
         border-radius: 50%;
-        transition: transform 1.5s ease-in-out;
-      }
-      img:hover{
-        transform: rotateZ(90deg) scale(0.5);
+        animation: coinFlip 2s ease-in-out infinite;
       }
     </style>
   </head>
