--- a/study/study.html
+++ b/study/study.html
@@ -3,12 +3,28 @@
   <head>
     <link href="styles.css" , rel="stylesheed" />
     <style>
+      body{
+        display:flex;
+        height: 80vh;
+        align-items: center;
+        justify-content: center;
+      }
       @keyframes coinFlip {
         0%{
           transform : rotateY(0);
         }
+        25%{
+          transform: scale(2);
+          border-radius: 0px;
+        }
         50%{
-          transform : rotateY(360deg) translateY(-100px);
+          transform : rotateY(180deg) translateY(-100px);
+          border-color: tomato;
+          opacity: 0;
+        }
+        75%{
+          transform: scale(1);
+          border-radius: 50%;
         }
         100%{
           transform : rotateY(0) 
