--- a/study/study.html
+++ b/study/study.html
@@ -8,19 +8,31 @@
         height: 80vh;
         align-items: center;
         justify-content: center;
+        flex-direction: column;
       }
       div{
         background-color: teal;
         height: 200px;
         width:200px;
       }
-      @media screen and (max-width: 400px){
+      span{
+        font-size: 50px;
+      }
+      @media screen and (min-width: 601px) and (max-width: 1200px) 
+      {
         div{
-          background-color: tomato;
+          background-color: yellowgreen;
+        }
+      }
+      @media screen and (orientation: landscape){
+        span{
+          display : none;
         }
       }
     </style>
   </head>
   <body>
-    <div></div>  </body>
+    <div></div>
+    <span>가로로 눕혀주세요</span>
+  </body>
 </html>
