--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="css/styles.css" rel="stylesheet"/>
     <title>Welcome to Kokoa Talk</title>
 </head>
 <body>
@@ -16,12 +17,12 @@
         </div>
         <div class="status-bar__column">
             <span>110%</span>
-            <i class="fas fa-battery-full"></i>
+            <i class="fas fa-battery-full fa-lg"></i>
             <i class="fas fa-bolt"></i> 
         </div>
     </div>
     <header class="welcome-header">
-        <h1 class="welcome-header__title" >Welcome to Kkoka Clone</h1>
+        <h1 class="welcome-header__title" >Welcome to Kokoa Clone</h1>
         <p class="welcome-header__text" >If you have a Kokoa Account, log in with your email or phone number.</p>
     </header>
     <form id="login-form">
