--- a/friends.html
+++ b/friends.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="css/styles.css" rel="stylesheet"/>
-    <title>Welcome to Kokoa Talk</title>
+    <title>Friends - Kokoa Clone</title>
 </head>
 <body>
     <div class='status-bar'>
@@ -22,6 +22,16 @@
         </div>
     </div>
 
+
+
+    <nav>
+        <ul>
+            <li><a href="#"><i class="fas fa-user fa-lg"></i></a></li>
+            <li><a href="#"><i class="far fa-comment fa-lg"></i></a></li>
+            <li><a href="#"><i class="fas fa-search fa-lg"></i></a></li>
+            <li><a href="#"><i class="fas fa-ellipsis-h fa-lg"></i></a></li>
+        </ul>
+    </nav>
     <script src="https://kit.fontawesome.com/7d7d69e213.js" crossorigin="anonymous">
     </script>
 </body>
