--- a/friends.html
+++ b/friends.html
@@ -26,10 +26,12 @@
 
     <nav class="nav">
         <ul class="nav__list">
-            <li class="nav__btn"><a class="nav__link" href="#"><i class="fas fa-user fa-lg"></i></a></li>
-            <li class="nav__btn"><a class="nav__link" href="#"><i class="far fa-comment fa-lg"></i></a></li>
-            <li class="nav__btn"><a class="nav__link" href="#"><i class="fas fa-search fa-lg"></i></a></li>
-            <li class="nav__btn"><a class="nav__link" href="#"><i class="fas fa-ellipsis-h fa-lg"></i></a></li>
+            <li class="nav__btn"><a class="nav__link" href="#"><i class="fas fa-user fa-2x"></i></a></li>
+            <li class="nav__btn"><a class="nav__link" href="#">
+                <span class="nav__notification">1</span>
+                <i class="far fa-comment fa-2x"></i></a></li>
+            <li class="nav__btn"><a class="nav__link" href="#"><i class="fas fa-search fa-2x"></i></a></li>
+            <li class="nav__btn"><a class="nav__link" href="#"><i class="fas fa-ellipsis-h fa-2x"></i></a></li>
         </ul>
     </nav>
     <script src="https://kit.fontawesome.com/7d7d69e213.js" crossorigin="anonymous">
