...에도 알람표시

--- a/friends.html
+++ b/friends.html
@@ -31,7 +31,9 @@
                 <span class="nav__notification">1</span>
                 <i class="far fa-comment fa-2x"></i></a></li>
             <li class="nav__btn"><a class="nav__link" href="#"><i class="fas fa-search fa-2x"></i></a></li>
-            <li class="nav__btn"><a class="nav__link" href="#"><i class="fas fa-ellipsis-h fa-2x"></i></a></li>
+            <li class="nav__btn"><a class="nav__link" href="#">
+                <div class="nav__notification"></div>
+                <i class="fas fa-ellipsis-h fa-2x"></i></a></li>
         </ul>
     </nav>
     <script src="https://kit.fontawesome.com/7d7d69e213.js" crossorigin="anonymous">
