--- a/friends.html
+++ b/friends.html
@@ -30,6 +30,8 @@
         </div>
     </header>
 
+    <a class="friends-display-link">
+        <i class="fas fa-info-circle"></i>Friends' Names Display</a>
 
     <nav class="nav">
         <ul class="nav__list">
@@ -39,7 +41,7 @@
                 <i class="far fa-comment fa-2x"></i></a></li>
             <li class="nav__btn"><a class="nav__link" href="#"><i class="fas fa-search fa-2x"></i></a></li>
             <li class="nav__btn"><a class="nav__link" href="#">
-                <div class="nav__notification"></div>
+                <div class="nav__notification__little"></div>
                 <i class="fas fa-ellipsis-h fa-2x"></i></a></li>
         </ul>
     </nav>
