--- a/friends.html
+++ b/friends.html
@@ -30,7 +30,7 @@
         </div>
     </header>
 
-    <a class="friends-display-link">
+    <a id="friends-display-link">
         <i class="fas fa-info-circle"></i>Friends' Names Display</a>
 
     <nav class="nav">
