--- a/friends.html
+++ b/friends.html
@@ -22,7 +22,7 @@
         </div>
     </div>
     <header class="screen-header">
-        <h1 class="screen-header_title">Friends</h1>
+        <h1 class="screen-header__title">Friends</h1>
         <div class="screen-header__icons">
             <span><i class="fas fa-search fa-lg"></i></span>
             <span><i class="fas fa-music fa-lg"></i></span>
@@ -31,7 +31,8 @@
     </header>
 
     <a id="friends-display-link">
-        <i class="fas fa-info-circle"></i>Friends' Names Display</a>
+        <i class="fas fa-info-circle"></i>Friends' Names Display
+        <i class="fas fa-chevron-right fa-xs"></i></a>
 
     <nav class="nav">
         <ul class="nav__list">
