--- a/friends.html
+++ b/friends.html
@@ -34,6 +34,17 @@
         <i class="fas fa-info-circle"></i>Friends' Names Display
         <i class="fas fa-chevron-right fa-xs"></i></a>
 
+    <div class="user-component">
+        <div class="user-component__column">
+            <img src="profile.jpg" class="user-component__avatar" />
+            <div class="user-component__text">
+                <h4 class="user-component__title">HYEONGJUN JANG</h4>
+                <h6 class="user-component__subtitle">This is text</h6>
+            </div>
+        </div>
+        <div class="user-component__column"></div>
+    </div>
+
     <nav class="nav">
         <ul class="nav__list">
             <li class="nav__btn"><a class="nav__link" href="#"><i class="fas fa-user fa-2x"></i></a></li>
