--- a/friends.html
+++ b/friends.html
@@ -33,17 +33,26 @@
     <a id="friends-display-link">
         <i class="fas fa-info-circle"></i>Friends' Names Display
         <i class="fas fa-chevron-right fa-xs"></i></a>
-
-    <div class="user-component">
-        <div class="user-component__column">
-            <img src="profile.jpg" class="user-component__avatar" />
-            <div class="user-component__text">
-                <h4 class="user-component__title">HYEONGJUN JANG</h4>
-                <h6 class="user-component__subtitle">This is text</h6>
+    
+    <main class="friends-screen">
+        <div class="user-component">
+            <div class="user-component__column">
+                <img src="profile.jpg" class="user-component__avatar user-component__avatar--xl" />
+                <div class="user-component__text">
+                    <h4 class="user-component__title">HYEONGJUN JANG</h4>
+                <!--  <h6 class="user-component__subtitle">This is text</h6>    -->
+                </div>
+            </div>
+            <div class="user-component__column"></div>
+        </div>
+        <div class="friends-screen__channel">
+            <div class="friends-screen__channel-header">
+                <span>Channel</span><i class="fas fa-chevron-up"></i>
             </div>
         </div>
-        <div class="user-component__column"></div>
-    </div>
+    </main>
+
+
 
     <nav class="nav">
         <ul class="nav__list">
