--- a/friends.html
+++ b/friends.html
@@ -49,6 +49,19 @@
             <div class="friends-screen__channel-header">
                 <span>Channel</span><i class="fas fa-chevron-up"></i>
             </div>
+
+            <div class="user-component">
+                <div class="user-component__column">
+                    <img src="profile.jpg" class="user-component__avatar user-component__avatar--sm" />
+                    <div class="user-component__text">
+                        <h4 class="user-component__title">HYEONGJUN JANG</h4>
+                    </div>
+                </div>
+                <div class="user-component__column">
+                    <span>2</span>
+                    <i class="fas fa-chevron-right fa-xs"></i>
+                </div>
+            </div>
         </div>
     </main>
 
