--- a/friends.html
+++ b/friends.html
@@ -34,7 +34,7 @@
         <i class="fas fa-info-circle"></i>Friends' Names Display
         <i class="fas fa-chevron-right fa-xs"></i></a>
     
-    <main class="friends-screen">
+    <main class="friends-screen-main">
         <div class="user-component">
             <div class="user-component__column">
                 <img src="profile.jpg" class="user-component__avatar user-component__avatar--xl" />
@@ -52,9 +52,9 @@
 
             <div class="user-component">
                 <div class="user-component__column">
-                    <img src="profile.jpg" class="user-component__avatar user-component__avatar--sm" />
+                    <img src="channel.jpg" class="user-component__avatar user-component__avatar--sm" />
                     <div class="user-component__text">
-                        <h4 class="user-component__title">HYEONGJUN JANG</h4>
+                        <h4 class="user-component__title user-component__title--not-bold">Channel</h4>
                     </div>
                 </div>
                 <div class="user-component__column">
