--- a/friends.html
+++ b/friends.html
@@ -34,7 +34,7 @@
         <i class="fas fa-info-circle"></i>Friends' Names Display
         <i class="fas fa-chevron-right fa-xs"></i></a>
     
-    <main class="friends-screen-main">
+    <main class="friends-screen">
         <div class="user-component">
             <div class="user-component__column">
                 <img src="profile.jpg" class="user-component__avatar user-component__avatar--xl" />
