--- a/chats.html
+++ b/chats.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="css/styles.css" rel="stylesheet"/>
-    <title>Friends - Kokoa Clone</title>
+    <title>Chats - Kokoa Clone</title>
 </head>
 <body>
     <div class='status-bar'>
@@ -21,8 +21,9 @@
             <i class="fas fa-bolt"></i> 
         </div>
     </div>
+
     <header class="screen-header">
-        <h1 class="screen-header__title">Friends</h1>
+        <h1 class="screen-header__title">Chats</h1>
         <div class="screen-header__icons">
             <span><i class="fas fa-search fa-lg"></i></span>
             <span><i class="fas fa-music fa-lg"></i></span>
@@ -69,10 +70,12 @@
 
     <nav class="nav">
         <ul class="nav__list">
-            <li class="nav__btn"><a class="nav__link" href="friends.html"><i class="fas fa-user fa-2x"></i></a></li>
+            <li class="nav__btn"><a class="nav__link" href="friends.html">
+                <i class="far fa-user fa-2x"></i></a></li>
             <li class="nav__btn"><a class="nav__link" href="chats.html">
                 <span class="nav__notification">1</span>
-                <i class="far fa-comment fa-2x"></i></a></li>
+                <i class="fas fa-comment fa-2x"></i>
+                </a></li>
             <li class="nav__btn"><a class="nav__link" href="find.html"><i class="fas fa-search fa-2x"></i></a></li>
             <li class="nav__btn"><a class="nav__link" href="more.html">
                 <div class="nav__notification__little"></div>
