--- a/chats.html
+++ b/chats.html
@@ -26,44 +26,25 @@
         <h1 class="screen-header__title">Chats</h1>
         <div class="screen-header__icons">
             <span><i class="fas fa-search fa-lg"></i></span>
+            <span><i class="far fa-comment-dots fa-lg"></i></span>
             <span><i class="fas fa-music fa-lg"></i></span>
             <span><i class="fas fa-cog fa-lg"></i></span>
         </div>
     </header>
 
-    <a id="friends-display-link">
-        <i class="fas fa-info-circle"></i>Friends' Names Display
-        <i class="fas fa-chevron-right fa-xs"></i></a>
     
     <main class="friends-screen">
         <div class="user-component">
             <div class="user-component__column">
-                <img src="profile.jpg" class="user-component__avatar user-component__avatar--xl" />
+                <img src="profile.jpg" class="user-component__avatar user-component__avatar" />
                 <div class="user-component__text">
                     <h4 class="user-component__title">HYEONGJUN JANG</h4>
-                <!--  <h6 class="user-component__subtitle">This is text</h6>    -->
+                  <h6 class="user-component__subtitle">Please check My Kokoa Account Info</h6>    
                 </div>
             </div>
             <div class="user-component__column"></div>
         </div>
-        <div class="friends-screen__channel">
-            <div class="friends-screen__channel-header">
-                <span>Channel</span><i class="fas fa-chevron-up"></i>
-            </div>
 
-            <div class="user-component">
-                <div class="user-component__column">
-                    <img src="channel.jpg" class="user-component__avatar user-component__avatar--sm" />
-                    <div class="user-component__text">
-                        <h4 class="user-component__title user-component__title--not-bold">Channel</h4>
-                    </div>
-                </div>
-                <div class="user-component__column">
-                    <span>2</span>
-                    <i class="fas fa-chevron-right fa-xs"></i>
-                </div>
-            </div>
-        </div>
     </main>
 
 
