--- a/chats.html
+++ b/chats.html
@@ -33,7 +33,7 @@
     </header>
 
     
-    <main class="friends-screen">
+    <main class="main-screen">
         <div class="user-component">
             <div class="user-component__column">
                 <img src="profile.jpg" class="user-component__avatar user-component__avatar" />
@@ -42,7 +42,10 @@
                   <h6 class="user-component__subtitle">Please check My Kokoa Account Info</h6>    
                 </div>
             </div>
-            <div class="user-component__column"></div>
+            <div class="user-component__column">
+                <span>21:22</span>
+                <span class="nav__notification">1</span>
+            </div>
         </div>
 
     </main>
@@ -54,7 +57,7 @@
             <li class="nav__btn"><a class="nav__link" href="friends.html">
                 <i class="far fa-user fa-2x"></i></a></li>
             <li class="nav__btn"><a class="nav__link" href="chats.html">
-                <span class="nav__notification">1</span>
+                <span class="nav__notification badge">1</span>
                 <i class="fas fa-comment fa-2x"></i>
                 </a></li>
             <li class="nav__btn"><a class="nav__link" href="find.html"><i class="fas fa-search fa-2x"></i></a></li>
