channel hotfix, notify

--- a/chats.html
+++ b/chats.html
@@ -43,8 +43,8 @@
                 </div>
             </div>
             <div class="user-component__column">
-                <span>21:22</span>
-                <span class="nav__notification">1</span>
+                <span class="user-component__time">21:22</span>
+                <span class="badge">1</span>
             </div>
         </div>
 
