--- a/find.html
+++ b/find.html
@@ -35,10 +35,20 @@
     
     <main class="main-screen">
         <div class="find-icons">
-            <div class="find-icons__icon">QR Code</div>
-            <div class="find-icons__icon">Add by Contacts</div>
-            <div class="find-icons__icon">Add by ID</div>
-            <div class="find-icons__icon">Invite</div>
+            <div class="find-icons__icon">
+                <i class="fas fa-qrcode"></i>
+                <span>QR Code</span>
+            </div>
+            <div class="find-icons__icon">
+                <i class="far fa-address-book"></i>
+                <span>Add by Contacts</span>
+            </div>
+            <div class="find-icons__icon">
+                <i class="fas fa-fingerprint"></i>
+                <span>Add by ID</span></div>
+            <div class="find-icons__icon">
+                <i class="far fa-envelope"></i>
+                <span>Invite</span></div>
         </div>
     </main>
 
