--- a/friends.html
+++ b/friends.html
@@ -32,7 +32,8 @@
 
     <a id="friends-display-link">
         <i class="fas fa-info-circle"></i>Friends' Names Display
-        <i class="fas fa-chevron-right fa-xs"></i></a>
+        <i class="fas fa-chevron-right fa-xs"></i>
+    </a>
     
     <main class="friends-screen">
         <div class="user-component">
