--- a/find.html
+++ b/find.html
@@ -71,7 +71,15 @@
             </div>
         </div>
 
-        <div class="open-post__column"></div>
+        <div class="open-post__column">
+            <div class="open-post__photo">
+                <img src="https://scontent-ssn1-1.xx.fbcdn.net/v/t1.0-1/p720x720/101894270_2728622424039184_2590823164569190400_o.jpg?_nc_cat=106&_nc_sid=dbb9e7&_nc_ohc=yX_tNShA_zkAX9ACsHk&_nc_ht=scontent-ssn1-1.xx&tp=6&oh=8ab29799a4f48e746f33ef1c9b710bba&oe=5FAD7D34"/>
+                <div class="open-post__heart-count">
+                    <i class="fas fa-heart fa-xs"></i>
+                    <span>326</span>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
         
