--- a/find.html
+++ b/find.html
@@ -27,13 +27,15 @@
             <span><i class="fas fa-search fa-lg"></i></span>
             <span>
                 <div class="nav__notification__little"></div>
-                <i class="fas fa-cog fa-lg"></i></span>
+                <a href="settings.html">
+                    <i class="fas fa-cog fa-lg"></i></span>
+                </a></span>
             
         </div>
     </header>
 
     
-    <main class="main-screen">
+    <main class="main-screen ">
         <div class="icon-row">
             <div class="icon-row__icon">
                 <i class="fas fa-qrcode"></i>
