--- a/chats.html
+++ b/chats.html
@@ -36,6 +36,8 @@
 
     
     <main class="main-screen">
+        <a href="chat.html">
+
         <div class="user-component">
             <div class="user-component__column">
                 <img src="profile.jpg" class="user-component__avatar user-component__avatar" />
@@ -49,7 +51,7 @@
                 <span class="badge">1</span>
             </div>
         </div>
-
+    </a>
     </main>
 
 
