--- a/chat.html
+++ b/chat.html
@@ -44,8 +44,19 @@
         <main class="main-screen main-chat">
             <div class="chat__timestamp">Tuesday, June 30, 2020</div>
 
-         </main>
-       
+
+            <div class="message-row">
+                <img src="profile.jpg" alt="">
+                <div class="message-row__content">
+                    <span class="message__author">Nicolas</span>
+                    <div class="message__info">
+                        <span class="message__bubble">Hi</span>
+                        <span class="message__time">21:27</span>
+                    </div>
+                </div>
+            </div>
+        </main>
+        
         <script src="https://kit.fontawesome.com/7d7d69e213.js" crossorigin="anonymous">
         </script>
     </body>
