mk 입력창과 아이콘 , 버튼 만들기

--- a/chat.html
+++ b/chat.html
@@ -75,10 +75,22 @@
                     </div>
                 </div>
             </div>
-            
+
 
         </main>
-        
+
+        <form class="reply">
+            <div class="reply__column">
+                <i class="far fa-plus-square"></i>
+            </div>
+            <div class="reply__column">
+                <input type='text' placeholder="Write a message..."/>
+                <i class="far fa-smile-beam"></i>
+                <button>
+                    <i class="fas fa-arrow-up"></i>
+                </button>
+            </div>
+        </form>
         <script src="https://kit.fontawesome.com/7d7d69e213.js" crossorigin="anonymous">
         </script>
     </body>
