--- a/chat.html
+++ b/chat.html
@@ -81,11 +81,11 @@
 
         <form class="reply">
             <div class="reply__column">
-                <i class="far fa-plus-square"></i>
+                <i class="far fa-plus-square fa-lg"></i>
             </div>
             <div class="reply__column">
                 <input type='text' placeholder="Write a message..."/>
-                <i class="far fa-smile-beam"></i>
+                <i class="far fa-smile-beam fa-lg"></i>
                 <button>
                     <i class="fas fa-arrow-up"></i>
                 </button>
