--- a/friends.html
+++ b/friends.html
@@ -84,6 +84,10 @@
                 <i class="fas fa-ellipsis-h fa-2x"></i></a></li>
         </ul>
     </nav>
+
+    <div id="splash-screen">
+        <i class="fas fa-comment "></i>
+    </div>
     <script src="https://kit.fontawesome.com/7d7d69e213.js" crossorigin="anonymous">
     </script>
 </body>
