--- a/chat.html
+++ b/chat.html
@@ -43,30 +43,34 @@
         
         <main class="main-screen main-chat">
             <div class="chat__timestamp">Tuesday, June 30, 2020</div>
-
-
             <div class="message-row">
                 <img src="profile.jpg" alt="">
                 <div class="message-row__content">
                     <span class="message__author">Nicolas</span>
                     <div class="message__info">
                         <span class="message__bubble">Hi</span>
-                        <span class="message__time">21:27</span>
+                        <span class="message__time">21:28</span>
                     </div>
                 </div>
             </div>
-
+            <div class="message-row message-row--own">
+                <div class="message-row__content">
+                    <div class="message__info">
+                        <span class="message__bubble">Hi i'm HJ</span>
+                        <span class="message__time">22:27</span>
+                    </div>
+                </div>
+            </div>
             <div class="message-row">
                 <img src="profile.jpg" alt="">
                 <div class="message-row__content">
                     <span class="message__author">Nicolas</span>
                     <div class="message__info">
                         <span class="message__bubble">Hi</span>
-                        <span class="message__time">21:27</span>
+                        <span class="message__time">23:27</span>
                     </div>
                 </div>
             </div>
-            
             <div class="message-row message-row--own">
                 <div class="message-row__content">
                     <div class="message__info">
@@ -75,10 +79,7 @@
                     </div>
                 </div>
             </div>
-
-
         </main>
-
         <form class="reply">
             <div class="reply__column">
                 <i class="far fa-plus-square fa-lg"></i>
