화면 사이즈에 대한 dispaly처리
미디어쿼리 사용

--- a/more.html
+++ b/more.html
@@ -106,6 +106,9 @@
                 <i class="fas fa-ellipsis-h fa-2x"></i></a></li>
         </ul>
     </nav>
+    <div class="no-mobile">
+        <span>Your screen too big</span>
+    </div>
      <script src="https://kit.fontawesome.com/7d7d69e213.js" crossorigin="anonymous">
      </script>
 </body>
