--- a/chat.html
+++ b/chat.html
@@ -92,6 +92,9 @@
                 </button>
             </div>
         </form>
+        <div class="no-mobile">
+            <span>Your screen too big</span>
+        </div>
         <script src="https://kit.fontawesome.com/7d7d69e213.js" crossorigin="anonymous">
         </script>
     </body>
