--- a/friends.html
+++ b/friends.html
@@ -88,6 +88,10 @@
     <div id="splash-screen">
         <i class="fas fa-comment "></i>
     </div>
+
+    <div class="no-mobile">
+        <span>Your screen too big</span>
+    </div>
     <script src="https://kit.fontawesome.com/7d7d69e213.js" crossorigin="anonymous">
     </script>
 </body>
