--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
         <input type='submit' value="Sign Up"/>
         <a href="#">Find Kokoa Account or Password</a>
     </form>
-
+    <div class="no-mobile">
+        <span>Your screen too big</span>
+    </div>
     <script src="https://kit.fontawesome.com/7d7d69e213.js" crossorigin="anonymous">
     </script>
 </body>
