--- a/chat.html
+++ b/chat.html
@@ -12,7 +12,7 @@
                 <span>No Service</span>
                 <i class="fas fa-wifi"></i>
             </div>
-            <div class="status-bar__column">
+            <div id='current-time' class="status-bar__column">
                 <span>18:43</span>
             </div>
             <div class="status-bar__column">
@@ -95,7 +95,8 @@
         <div class="no-mobile">
             <span>Your screen too big</span>
         </div>
-        <script src="https://kit.fontawesome.com/7d7d69e213.js" crossorigin="anonymous">
-        </script>
-    </body>
+        <script src="https://kit.fontawesome.com/7d7d69e213.js" crossorigin="anonymous"></script>
+
+        <script type="text/javascript", src='./index.js'></script>
+</body>
 </html>
